fixed overflow for topic/post wrapper

--- a/app/assets/stylesheets/web/carmic.scss
+++ b/app/assets/stylesheets/web/carmic.scss
@@ -371,13 +371,6 @@ $background-color: white;
 
 }
 
-#display_topic{
-  width: auto;
-  height: 500px;
-  //box-shadow: 0 0 200px rgba(255, 255, 255, 0.5), 0 1px 2px rgba(0, 0, 0, 0.3);
-  overflow-y : scroll;
-
-}
 
 #nav{
   width: auto;
@@ -1121,4 +1114,12 @@ div#btn_zoom_in,div#btn_zoom_out{
   -moz-transition   : all 2s linear;
   -webkit-transition: all 2s linear;
   -o-transition     : all 2s linear;
+}
+
+#display_topic_post{
+  width: auto;
+  height: 550px;
+  //box-shadow: 0 0 200px rgba(255, 255, 255, 0.5), 0 1px 2px rgba(0, 0, 0, 0.3);
+  overflow-y : scroll;
+
 }
